[gd_scene load_steps=9 format=3 uid="uid://b3yv1f31b7ory"]

[ext_resource type="Script" path="res://test_drag_mechanics/PlayerCam.gd" id="1_on4s0"]
[ext_resource type="Script" path="res://test_drag_mechanics/Label.gd" id="2_4a4vs"]
[ext_resource type="Script" path="res://test_drag_mechanics/RayCast3D.gd" id="2_jchfj"]
[ext_resource type="PackedScene" uid="uid://bxp66ln4tbyng" path="res://Time_scene/dateandtime.tscn" id="4_h27uf"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_lcss7"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_jbreo"]
sky_material = SubResource("ProceduralSkyMaterial_lcss7")

[sub_resource type="Environment" id="Environment_y1rh8"]
background_mode = 2
sky = SubResource("Sky_jbreo")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="CapsuleMesh" id="CapsuleMesh_75aid"]

[node name="PlayerCam" type="Node3D"]
script = ExtResource("1_on4s0")

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_y1rh8")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
visible = false

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.878683, 0)
mesh = SubResource("CapsuleMesh_75aid")

[node name="Head" type="Node3D" parent="MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.122679, 0.736819, -0.00525028)

[node name="Camera3D" type="Camera3D" parent="MeshInstance3D/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.313402, -0.00106788, 0.0334892)

[node name="Label" type="Label" parent="MeshInstance3D/Head/Camera3D"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -552.0
offset_top = -312.5
offset_right = 552.0
offset_bottom = 312.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 44
text = "Timer:"
script = ExtResource("2_4a4vs")

[node name="Timer" type="Timer" parent="MeshInstance3D/Head/Camera3D"]
wait_time = 60.0
one_shot = true
autostart = true

[node name="RayCast3D" type="RayCast3D" parent="MeshInstance3D/Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.190723, -0.215555, -0.0282389)
target_position = Vector3(0, 0, -30)
hit_from_inside = true
script = ExtResource("2_jchfj")

[node name="Grabby" type="Node3D" parent="MeshInstance3D/Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.190723, -0.134136, -2.19934)

[node name="itemA_label" type="Label3D" parent="MeshInstance3D/Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.999649, 0.026491, 0, -0.026491, 0.999649, -1.06875, 0.391421, -1.18987)
visible = false
text = "SAMPLE TEXT"
font_size = 12

[node name="itemB_label" type="Label3D" parent="MeshInstance3D/Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.999649, 0.026491, 0, -0.026491, 0.999649, -1.06875, 0.284729, -1.18987)
visible = false
text = "SAMPLE TEXT"
font_size = 12

[node name="Results_label" type="Label3D" parent="MeshInstance3D/Head/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.999649, 0.026491, 0, -0.026491, 0.999649, -1.06875, 0.107962, -1.18987)
visible = false
text = "SAMPLE TEXT"
font_size = 12

[node name="Dateandtime" parent="." instance=ExtResource("4_h27uf")]
